# IndustrialQuest

./: .env.example  .gitignore  CHEAT_SHEET.txt  CHECKLIST_DEPLOYMENT.txt  DEPLOY.md  Grammar Adventure.py  INSTRUCCIONES_FINALES.md  IndustrialQuest.py  QUICKSTART.md  README.md  README_WEB.md  RESUMEN_SETUP.txt  build.bat  ejecutar.bat  index.html  main.py  netlify.toml  production_logs.json  pyproject.toml  verify_deploy.py
.github/workflows/: build-deploy.yml
Grammar Adventure/: Grammar Adventure.py
Material/: pixel wood sign.avif
docs/: 01-ConfiguracionGeneral.md  01-Introduccion.md  02-MecanicasJuego.md  02-comandosPrincipales.md  03-CapitulosGramatica.md  03-arquitecturaProyecto.md  04-ArquitecturaMotor.md  04-BaseDatos.md  05-GuiasDesarrollo.md  05-InicioRapido.md  06-EstructuraFrontend.md  06-RecursosVisualesSonoros.md  07-Credenciales.md  08-AJAX-Backend.md
scratch/: generate_ambient_music.py  generate_sounds.py  list_sentences.py  save_images.py  test_compile.py
src/: administrador_recursos.py  almacenamiento.py  constantes.py  datos_juego.py  frase.py  motor.py  pantalla.py  pantalla_ajustes.py  pantalla_fin.py  pantalla_juego.py  pantalla_logs.py  pantalla_manual.py  pantalla_menu.py  pantalla_niveles.py  pantalla_reglas.py  tooltip.py  traductor.py
